--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
             </p>
         </div>
        </section>
+
+
+       <!-- Values Section -->
+
        <section class="value">
             <div class="value-head">
                 <h5>
@@ -144,9 +148,204 @@
                 </div>
             </div>
        </section>
+
+       <!-- Key Person Section -->
+
+       <section class="person">
+            <div>
+                <h5>
+                    key persons
+                </h5>
+                <div class="arrow">
+                    <h2>
+                        Meet our Esteemed Faculties
+                    </h2>
+                    <div class="arrow-section">
+                        <div class="left-arrow">
+                            <a href=""><img src="Images/left-arrow.png" alt="#"></a>
+                        </div>
+                        <div class="right-arrow">
+                            <a href=""><img src="Images/right.png" alt="3"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="person-details">
+                    <div class="proprietor">
+                        <img src="Images/man1.png" alt="#">
+                        <h4>
+                            Jimmy Cooper
+                        </h4>
+                        <p>
+                            Proprietor
+                        </p>
+                    </div>
+                    <div class="proprietor">
+                        <img src="Images/man2.png" alt="#">
+                        <h4>
+                            Christian Howard
+                        </h4>
+                        <p>
+                            Principal, Primary Section
+                        </p>
+                    </div>
+                    <div class="proprietor">
+                        <img src="Images/lady.png" alt="#">
+                        <h4>
+                            Sandra Wilson
+                        </h4>
+                        <p>
+                            Head Teacher, Primary Section
+                        </p>
+                    </div>
+                </div>
+            </div>
+       </section>
+       <!-- More info Section -->
+       <section class="info">
+            <div class="info-head">
+                <p>more info</p>
+                <h1>Common questions</h1>
+            </div>
+            <div class="info-body">
+                <div class="info-img">
+                    <img src="Images/faq.png" alt="#">
+                </div>
+                <div class="faq">
+                    <div class="admission">
+                        <h5>How can I apply to Independence Academy, Ibadan?</h5>
+                        <p>
+                            You can apply through our online application 
+                            portal or contact our admissions office for more information.
+                        </p>
+                    </div>
+                    <div class="apply">
+                        <h5>How can I apply to Independence Academy, Ibadan?</h5>
+                    </div>
+                    <div class="apply">
+                        <h5>What’s the size of the school programs?</h5>
+                    </div>
+                    <div class="apply">
+                        <h5>Do I need to buy materials for lessons?</h5>
+                    </div>
+                </div>
+            </div>
+       </section>
+       <!-- Moment At IAC Section -->
+       <section class="moment">
+            <div class="moment-head">
+                <div class="life">
+                    <p class="">
+                        Discover the vibrant life
+                    </p>
+                    <h1 class="">
+                        Moments at IAC
+                    </h1>
+                </div>
+                <div class="ig">
+                    <a href="#">
+                        <img src="Images/Instagram.png" alt="#">
+                        <i>theindependenceacademy</i>
+                    </a>
+                </div>
+            </div>
+            <div class="moment-body">
+                <div class="moment-body-1">
+                    <img src="Images/image 5.png" alt="#">
+                    <img src="Images/image 6.png" alt="#">
+                    <img src="Images/image 7.png" alt="#">
+                    <img src="Images/Image 8.png" alt="#">
+                    <img src="Images/image 9.png" alt="#">
+                    <img src="Images/image 10.png" alt="#">
+                </div>
+                <div class="moment-body-2">
+                    <img src="Images/image 11.png" alt="#">
+                    <img src="Images/image 12.png" alt="#">
+                    <img src="Images/image 13.png" alt="#">
+                    <img src="Images/image 14.png" alt="#">
+                    <img src="Images/image 15.png" alt="#">
+                    <img src="Images/image 16.png" alt="#">
+                </div>
+            </div>
+            <div class="moment-social">
+                <a href="#" class="more">
+                    Learn More
+                </a>
+                <a href="#" class="follow">
+                    <img src="Images/Frame.png" alt="#">
+                    <p>Follow on Instagram</p>
+                </a>
+            </div>
+       </section>
+
+       <!-- Find Us Section -->
+
+       <section class="location">
+            <div class="location-address">
+                <p class="location-head">Find Us Here</p>
+                <p class="location-body">
+                    Visit our school located at <a href="#">Elewe Odo, Ibadan </a> and 
+                    <a href="#"> Kolapo Ishola GRA, Ibadan. </a>
+                </p>
+                
+                <img src="Images/location.png" alt="#">
+                <p class="iac">Independence Academy</p>
+            </div>
+            <div class="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d126606.24911010085!2d3.8612964637107945!3d7.415870115956134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x103992d53c8badbd%3A0xe073f4123cfc446!2skm%20149%2C%20off%20Ojoo%20Expressway%2C%20elewi%20-%20odo%2C%20Ibadan!3m2!1d7.4158778!2d3.9436983999999997!5e0!3m2!1sen!2sng!4v1726221074274!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+       </section>
     </main>
     <footer>
-        <p>&copy; 2024 School Name. All rights reserved.</p>
+        <div class="address">
+            <div class="btn-logo">
+                <img src="Images/logo.png" alt="#">
+                <p>Independence Academy</p>
+            </div>
+            <div class="address-details">
+                <ul>
+                    <li>Elewi Odo Ibadan</li>
+                    <li>20 Osgood Rd, Kolapo Ishola</li>
+                    <li>GRA, Nigeria</li>
+                    <li>+234 803 871 2391</li>
+                    <li>info@independenceacademy.com</li>
+                </ul>
+            </div>
+        </div>
+        <div class="company">
+            <p>Company</p>
+            <ul>
+                <li>Career</li>
+                <li>Teacher</li>
+                <li>Support</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+        <div class="product">
+            <p>Product</p>
+            <ul>
+                <li>Courses</li>
+                <li>Pricing</li>
+                <li>Blog</li>
+            </ul>
+        </div>
+        <div class="legal">
+            <p>Legal</p>
+            <ul>
+                <li>Terms & Condition</li>
+                <li>Privacy Policy</li>
+            </ul>
+        </div>
+        <div class="social">
+            <a href="https://www.facebook.com/independence.acad">
+                <img src="Images/Facebook.png" alt="#">
+            </a>
+            <a href="#">
+                <img src="Images/Twitter.png" alt="#">
+            </a>
+            <a href="#">
+                <img src="Images/Instagram.png" alt="#">
+            </a>
+        </div>
     </footer>
     <script src="scripts.js"></script>
 </body>
