--- a/index.html
+++ b/index.html
@@ -50,6 +50,29 @@
             </div>
             <div class="container">
                 <img src="Images/img1.png" alt="img">
+                <div class="jane">
+                    <div class="jane-img"><img src="Images/M.png" alt="#"></div>
+                    <div class="cooper">
+                        <h5>Jane Cooper</h5>
+                        <p>I loved the Italian course!</p>
+                    </div>
+                </div>
+                <div class="courses">
+                    <h5>10+ Courses</h5>
+                    <p>Multiple Categories</p>
+                </div>
+                <div class="dedication">
+                    <div class="dedication-img">
+                        <img src="Images/ded 1.png" class="ded-1" alt="#">
+                        <img src="Images/ded 2.png" class="ded-2" alt="#">
+                        <img src="Images/ded 3.png" class="ded-3" alt="#">
+                        <img src="Images/ded 4.png" class="ded-4" alt="#">
+                    </div>
+                    <p>Dedicated students per day</p>
+                    <div class="likes">
+                        <p>+5000</p>
+                    </div>
+                </div>
             </div>
         </section>
     </header>
