--- a/index.html
+++ b/index.html
@@ -381,5 +381,5 @@
 <!-- JavaScript Section -->
 
 
-<script src="Javascript/main.js"></script>
+<!-- <script src="Javascript/main.js"></script> -->
 </html>
