--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     
         <section class="welcome">
             <div  class="greeting">
-                <h1>
+                <p class="h1">
                     Welcome to Independence Academy, Ibadan
-                </h1>
+                </p>
                 <p>
                     We are dedicated to nurturing the 
                     next generation of <br> leaders grounded 
