Done and tested

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         <section class="welcome">
             <div  class="greeting">
                 <p class="h1">
-                    Welcome to Independence Academy, Ibadan
+                    <span style="color: aquamarine;"> Welcome to </span> Independence Academy, Ibadan
                 </p>
                 <p>
                     We are dedicated to nurturing the 
-                    next generation of <br> leaders grounded 
-                    in Islamic values, academic excellence, <br>
+                    next generation of leaders grounded 
+                    in Islamic values, academic excellence,
                     and moral integrity.
                 </p>
                 <a href="#">Contact Us</a>
