--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
             </button>
             <div class="nav-item">
                 <ul class="nav-links" id="nav-links">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Admissions</a></li>
-                    <li><a href="#">Academics</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Courses</a></li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Teachers</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Blog</a></li>
                 </ul>
             </div>
             <div class="nav-contact">
@@ -38,7 +39,7 @@
         <section class="welcome">
             <div  class="greeting">
                 <p class="h1">
-                    <span style="color: aquamarine;"> Welcome to </span> Independence Academy, Ibadan
+                    <span style="color: #333333;"> Welcome to </span> Independence Academy, Ibadan
                 </p>
                 <p>
                     We are dedicated to nurturing the 
