--- a/index.html
+++ b/index.html
@@ -163,7 +163,10 @@
             </div>
         </div>
     </section>
-    <section>
+
+
+
+    <section class="mt-5">
         <div class="container p-3">
             <div class="d-flex justify-content-between"></div>
                 <div class="text-start mb-5">
@@ -194,6 +197,80 @@
                     <img src="Images/lady.png" class="person" alt="Sandra Wilson">
                     <h4>Sandra Wilson</h4>
                     <p>Head Teacher, Primary Section</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="mt-5">
+        <div class="container">
+            <div class="text-start mb-5">
+                <h6 style="color:#B0B0C0;">More Info</h6>
+                <h1>Common Questions</h1>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="Images/faq.png" class="img-fluid mb-3 person" alt="FAQ">
+                </div>
+                <div class="col-md-6 mt-5">
+                    <div class="accordion" id="faqAccordion">
+                        <div class="card mb-5 bg-dark text-light faq1">
+                            <div class="card-header" id="headingOne">
+                                <h2 class="mb-0">
+                                    <button class="fw-bolder btn btn-link btn-block text-left  text-decoration-none text-light" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                        How can I apply to Independence Academy, Ibadan?
+                                    </button>
+                                </h2>
+                            </div>
+                            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#faqAccordion">
+                                <div class="card-body ps-4">
+                                    You can apply through our online application portal or contact our admissions office for more information.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card mb-5 text-dark faq2">
+                            <div class="card-header" id="headingTwo">
+                                <h2 class="mb-0">
+                                    <button class="btn btn-link btn-block text-left collapsed text-dark text-decoration-none" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                        What’s the size of the school programs?
+                                    </button>
+                                </h2>
+                            </div>
+                            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#faqAccordion">
+                                <div class="card-body">
+                                    The size of the school programs varies depending on the course and the level of education.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card mb-5 faq2">
+                            <div class="card-header" id="headingThree">
+                                <h2 class="mb-0">
+                                    <button class="btn btn-link btn-block text-left collapsed text-dark text-decoration-none" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                        Do I need to buy materials for lessons?
+                                    </button>
+                                </h2>
+                            </div>
+                            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#faqAccordion">
+                                <div class="card-body">
+                                    Most materials are provided by the school, but some courses may require additional materials.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card mb-5 faq2">
+                            <div class="card-header" id="headingThree">
+                                <h2 class="mb-0">
+                                    <button class="btn btn-link btn-block text-left collapsed text-dark text-decoration-none" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                        Do I need to buy materials for lessons?
+                                    </button>
+                                </h2>
+                            </div>
+                            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#faqAccordion">
+                                <div class="card-body">
+                                    Most materials are provided by the school, but some courses may require additional materials.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
