--- a/index.html
+++ b/index.html
@@ -275,6 +275,68 @@
             </div>
         </div>
     </section>
+
+
+    <section class="mt-5">
+        <div class="container">
+            <div class="row mb-5"></div>
+                <div class="col-md-6 text-start">
+                    <h6 class="" style="color:#B0B0C0;">Discover the vibrant life</h6>
+                    <h1 class="">Moments at IAC</h1>
+                </div>
+                <div class="col-md-6 text-end">
+                    <a href="#" class="mb-3">
+                        <img src="Images/Instagram.png" class="rounded-circle" alt="Instagram">
+                        <i>theindependenceacademy</i>
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-2 col-sm-1 mb-3">
+                    <img src="Images/image 5.png" class="img-fluid rounded" alt="Moment at IAC">
+                </div>
+                <div class="col-md-2 col-sm-1 mb-3">
+                    <img src="Images/image 6.png" class="img-fluid rounded" alt="Moment at IAC">
+                </div>
+                <div class="col-md-2 col-sm-1 mb-3">
+                    <img src="Images/image 7.png" class="img-fluid rounded" alt="Moment at IAC">
+                </div>
+                <div class="col-md-2 col-sm-1 mb-3">
+                    <img src="Images/Image 8.png" class="img-fluid rounded" alt="Moment at IAC">
+                </div>
+                <div class="col-md-2 col-sm-1 mb-3">
+                    <img src="Images/image 9.png" class="img-fluid rounded" alt="Moment at IAC">
+                </div>
+                <div class="col-md-2 col-sm-1 mb-3">
+                    <img src="Images/image 10.png" class="img-fluid rounded" alt="Moment at IAC">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-2 mb-3">
+                    <img src="Images/image 5.png" class="img-fluid rounded" alt="Moment at IAC">
+                </div>
+                <div class="col-md-2 mb-3">
+                    <img src="Images/image 6.png" class="img-fluid rounded" alt="Moment at IAC">
+                </div>
+                <div class="col-md-2 mb-3">
+                    <img src="Images/image 7.png" class="img-fluid rounded" alt="Moment at IAC">
+                </div>
+                <div class="col-md-2 mb-3">
+                    <img src="Images/Image 8.png" class="img-fluid rounded" alt="Moment at IAC">
+                </div>
+                <div class="col-md-2 mb-3">
+                    <img src="Images/image 9.png" class="img-fluid rounded" alt="Moment at IAC">
+                </div>
+                <div class="col-md-2 mb-3">
+                    <img src="Images/image 10.png" class="img-fluid rounded" alt="Moment at IAC">
+                </div>
+            </div>
+            <div class="text-center">
+                <a href="#" class="btn btn-dark mr-2 load">Load More</a>
+                <a href="#" class="btn btn-primary follow">Follow on Instagram</a>
+            </div>
+        </div>
+    </section>
     
 </body>
 
