--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                     </a>
                 </div>
             </div>
-            <div class="row">
+            <div class="row align-item-center">
                 <div class="col-md-2 col-sm-1 mb-3">
                     <img src="Images/image 5.png" class="img-fluid rounded" alt="Moment at IAC">
                 </div>
