--- a/index.html
+++ b/index.html
@@ -277,9 +277,9 @@
     </section>
 
 
-    <section class="mt-5">
+    <section class="mt-5 hide">
         <div class="container">
-            <div class="row mb-5"></div>
+            <div class="row mb-5">
                 <div class="col-md-6 text-start">
                     <h6 class="" style="color:#B0B0C0;">Discover the vibrant life</h6>
                     <h1 class="">Moments at IAC</h1>
