--- a/index.html
+++ b/index.html
@@ -337,6 +337,25 @@
             </div>
         </div>
     </section>
+
+
+    <section class="mt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 mt-5">
+                    <h1 class="fw-bolder">Find Us Here</h1>
+                    <p class="fw-bold" style="font-size: 20px;">Visit our school located at <a href="#">Elewe Odo, Ibadan</a> and <a href="#">Kolapo Ishola GRA, Ibadan.</a></p>
+                    <div class="d-flex">
+                        <img src="Images/location.png" class="img-fluid rounded" alt="Location">
+                        <p class="font-weight-bold mt-2">Independence Academy</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <iframe class="person" src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d126606.24911010085!2d3.8612964637107945!3d7.415870115956134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x103992d53c8badbd%3A0xe073f4123cfc446!2skm%20149%2C%20off%20Ojoo%20Expressway%2C%20elewi%20-%20odo%2C%20Ibadan!3m2!1d7.4158778!2d3.9436983999999997!5e0!3m2!1sen!2sng!4v1726221074274!5m2!1sen!2sng" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+        </div>
+    </section>
     
 </body>
 
