--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
     </section>
 
 
-    <section class="mt-5">
+    <section class="mt-5 mb-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 mt-5">
@@ -356,9 +356,77 @@
             </div>
         </div>
     </section>
-    
-</body>
 
+
+
+    <footer>
+        <section class="mt-5">
+            <div class="container">
+                <div class="container p-3">
+                    <div class="row">
+                        <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
+                            <a class="navbar-brand" href="#"><img src="Images/logo.png" class="img-responsive" alt="Logo">Independence Academy</a>
+                            <ul class="list-unstyled mb-0">
+                                <li>Elewi Odo Ibadan</li>
+                                <li>20 Osgood Rd, Kolapo Ishola</li>
+                                <li>GRA, Nigeria</li>
+                                <li>+234 803 871 2391</li>
+                                <li>info@independenceacademy.com</li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-2 col-md-4 col-sm-6 col-xs-3 mb-4">
+                            <h5 class="text-uppercase">Company</h5>
+                            <ul class="list-unstyled">
+                                <li><a href="#" class="text-dark text-decoration-none">Career</a></li>
+                                <li><a href="#" class="text-dark text-decoration-none">Teacher</a></li>
+                                <li><a href="#" class="text-dark text-decoration-none">Support</a></li>
+                                <li><a href="#" class="text-dark text-decoration-none">Contact</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-2 col-md-4 col-sm-6 col-xs-3 mb-4">
+                            <h5 class="text-uppercase">Product</h5>
+                            <ul class="list-unstyled">
+                                <li><a href="#" class="text-dark text-decoration-none">Courses</a></li>
+                                <li><a href="#" class="text-dark text-decoration-none">Pricing</a></li>
+                                <li><a href="#" class="text-dark text-decoration-none">Blog</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-2 col-md-6 mb-4">
+                            <h5 class="text-uppercase">Legal</h5>
+                            <ul class="list-unstyled">
+                                <li><a href="#" class="text-dark text-decoration-none">Terms & Condition</a></li>
+                                <li><a href="#" class="text-dark text-decoration-none">Privacy Policy</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-2 col-md-6 mb-4">
+                            <ul class="list-unstyled d-flex gap-3">
+                                <li class="p-1">
+                                    <div class="social">
+                                        <a href="https://www.facebook.com/independence.acad" class="text-dark text-decoration-none"><i class="fab fa-facebook-f"></i></a>
+                                    </div>
+                                </li>
+                                <li class="p-1">
+                                    <div class="social">
+                                        <a href="https://www.facebook.com/independence.acad" class="text-dark text-decoration-none"><i class="fab fa-twitter"></i></a>
+                                    </div>
+                                </li>
+                                <li class="p-1">
+                                    <div class="social">
+                                        <a href="https://www.facebook.com/independence.acad" class="text-dark text-decoration-none"><i class="fab fa-instagram"></i></a>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </footer>
+            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>        
+            </div>
+        </section>
+    </footer>
+    
 </body>
 </html>
 
