--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <section >
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <section class="header">
+        <nav class="navbar navbar-expand-lg">
             <div class="container">
               <a class="navbar-brand" href="#"><img src="Images/logo.png" class="img-responsive" alt="Logo">Independence Academy</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -66,7 +66,7 @@
 
 
     <section>
-        <div class="container">
+        <div class="container p-5">
             <div class="row">
                 <div class="col-md-8 mission text-dark">
                     <h1 class="fw-bolder">Mission</h1>
@@ -85,7 +85,7 @@
     </section>
 
 
-    <section>
+    <section class="p-5">
         <div class="container">
             <div class="text-start mb-5"></div>
                 <h6 style="color:#B0B0C0;">WHY learn at Independence Academy?</h6>
@@ -166,7 +166,7 @@
 
 
 
-    <section class="mt-5">
+    <section class="mt-5 p-5">
         <div class="container p-3">
             <div class="d-flex justify-content-between"></div>
                 <div class="text-start mb-5">
@@ -202,7 +202,7 @@
         </div>
     </section>
 
-    <section class="mt-5">
+    <section class="mt-5 p-5">
         <div class="container">
             <div class="text-start mb-5">
                 <h6 style="color:#B0B0C0;">More Info</h6>
@@ -277,7 +277,7 @@
     </section>
 
 
-    <section class="mt-5 hide">
+    <section class="mt-5 hide p-5">
         <div class="container">
             <div class="row mb-5">
                 <div class="col-md-6 text-start">
@@ -339,7 +339,7 @@
     </section>
 
 
-    <section class="mt-5 mb-5">
+    <section class="mt-5 mb-5 p-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 mt-5">
